# bazel-demo

./: .bazelrc  .gitignore  .swiftlint.yml  BUILD  Example.md  FileDependencyTest  MODULE.bazel  Makefile  README.md  WORKSPACE  break.in  build_steps.txt  comment_test.txt  extensions.bzl  graph.in  package.in  repositories.bzl  test.txt  test2.txt
App/: BUILD  fake
App/Sources/: App.swift  BUILD  ContentView.swift  ContentView_Monolith.swift  DI.swift  FileDependencyTest.swift  FileDependencyTestConsumer.swift  RootSwiftUI.swift  SwiftLint.swift  Value.swift
App/Tests/: AppTests.swift  BUILD
Modules/DataStore/: Info.plist
Modules/DataStore/Sources/: BUILD  DataStore.swift
Modules/Details/Sources/: BUILD  DependencyTest.swift  DetailsFeature.swift  DetailsRouteHandler.swift  DetailsView.swift
Modules/Details/Tests/: BUILD  DetailsTests.swift
Modules/DetailsInterface/Sources/: BUILD  DetailsBuildable.swift  DetailsInterface.swift  DetailsRoute.swift
Modules/ExampleRIB/Sources/: BUILD  SelectionRIBRepresentable.swift  SimpleTextRIB.swift  SimpleTextRIBView.swift  SimpleTextViewController.swift
Modules/Home/Sources/: BUILD  Home.swift  HomeBuilder.swift
Modules/Home/Tests/: BUILD
Modules/RIBs/: BUILD
build_tools/: build_settings.bzl  feature.bzl  feature_macro.bzl
build_tools/settings_compilation/: BUILD
build_tools/settings_linking/: BUILD
build_tools/settings_module/: BUILD
build_tools/settings_rules_xcodeproj/: BUILD
build_tools/swiftlint/: swiftlint.bzl
tools/: build_configs.bzl  post_build.bzl  swiftlint.bzl
(+105 files in other folders)
