bazel_dep(name = "rules_xcodeproj", version = "2.11.2")

# git_override(
#     module_name = "rules_xcodeproj",
#     remote = "https://github.com/MobileNativeFoundation/rules_xcodeproj.git",
#     branch = "main"
# )

bazel_dep(name = "apple_support", version = "1.21.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_apple", version = "3.20.1", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_swift", version = "2.8.1", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "swiftlint", version = "0.59.1")

bazel_dep(name = "buildifier_prebuilt", version = "7.1.2")

non_module_dependencies = use_extension("//:extensions.bzl", "non_module_dependencies")
use_repo(non_module_dependencies, "swift_collections", "factory", "ribs")
